Fix for bug #8431 (FLOOR returns incorrect result)

mysql-test/r/type_newdecimal.result:
  test result fixed
mysql-test/t/type_newdecimal.test:
  test case enlarged for FLOOR and CEILING functions
sql/item_func.cc:
  floor::int_op fixed - it should work differently depending on operand's type