sql/item_func.cc
@@ -1638,14 +1638,14 @@ longlong Item_func_ceiling::int_op()
   case DECIMAL_RESULT:
   {
     my_decimal dec_buf, *dec;
-    if ((dec= decimal_op(&dec_buf)))
+    if ((dec= Item_func_ceiling::decimal_op(&dec_buf)))
       my_decimal2int(E_DEC_FATAL_ERROR, dec, unsigned_flag, &result);
     else
       result= 0;
     break;
   }
   default:
-    result= (longlong)real_op();
+    result= (longlong)Item_func_ceiling::real_op();
   };
   return result;
 }
@@ -1676,13 +1676,25 @@ my_decimal *Item_func_ceiling::decimal_op(my_decimal *decimal_value)
 
 longlong Item_func_floor::int_op()
 {
-  /*
-    the volatile's for BUG #3051 to calm optimizer down (because of gcc's
-    bug)
-  */
-  volatile double value= args[0]->val_real();
-  null_value= args[0]->null_value;
-  return (longlong) floor(value);
+  longlong result;
+  switch (args[0]->result_type()) {
+  case INT_RESULT:
+    result= args[0]->val_int();
+    null_value= args[0]->null_value;
+    break;
+  case DECIMAL_RESULT:
+  {
+    my_decimal dec_buf, *dec;
+    if ((dec= Item_func_floor::decimal_op(&dec_buf)))
+      my_decimal2int(E_DEC_FATAL_ERROR, dec, unsigned_flag, &result);
+    else
+      result= 0;
+    break;
+  }
+  default:
+    result= (longlong)Item_func_floor::real_op();
+  };
+  return result;
 }
 
 
